# Paint

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Paint.hpp  README.md  build_and_test.sh  canvas.cpp  canvas.hpp  editor.cpp  editor.hpp  main.cpp  setup.py  tools.cpp  tools.hpp  ui.cpp  ui.hpp
canvas/: Canvas.cpp  Canvas.hpp  Layer.cpp  Layer.hpp
docs/: CHANGES.md  COLOR_GRADING.md  FLOOD_FILL_AND_ADJUSTMENTS.md  FLOOD_SELECTION_TOOL.md  FONT_SYSTEM.md  NEW_FEATURES.md  OOP_DESIGN.md  RECENT_FIXES_SUMMARY.md  RECENT_IMPROVEMENTS.md  REFACTORING_REPORT.md  SDL_IMGUI_FUNCTIONS_REFERENCE.md  TECHNICAL_OVERVIEW.md  TEXT_TOOL_GUIDE.md  TROUBLESHOOTING.md  new_features.md
editor/: Editor.cpp  Editor.hpp
tools/: Tool.hpp  ToolManager.cpp
ui/: UI.cpp  UI.hpp
